Major Update: BETA TEST AT STAGING SERVER
Introduces a full frontend build pipeline with Vite, Tailwind, and Mediapipe assets. Adds Docker multi-stage build, healthcheck, and a deploy.sh helper script for easier deployment. Refactors Google Sheets logging to run in background threads and improves error handling. Updates .env.example, .dockerignore, .gitignore, and docker-compose.yaml for better environment and deployment management. Optimizes face registration logic to prevent multiple faces and avoid full reloads.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,35 @@
+version: '3.8'
+
 services:
   web:
-    build: .
-    container_name: face_attendance_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: absensipro_staging
     ports:
       - "1324:1324"
     volumes:
+      # Mount known_faces for persistent face data
       - ./known_faces:/app/known_faces
+      # Mount credentials (ensure this file exists)
+      - ./credentials.json:/app/credentials.json:ro
+    environment:
+      # Override .env values if needed for staging
+      - FLASK_HOST=0.0.0.0
+      - FLASK_PORT=5000
+      - FLASK_DEBUG=False
     env_file:
       - .env
-    restart: always
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:1324/login"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - absensipro_network
+
+networks:
+  absensipro_network:
+    driver: bridge
