--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,55 @@
-venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 .Python
+.venv/
+venv/
 env/
-.env
-instance/
+ENV/
 .pytest_cache/
-.coverage
-htmlcov/
-.git
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Git
+.git/
 .gitignore
-*.db
-test_output.txt
-tests/
-README.md
-docker-compose.yaml
-Dockerfile
+
+# Docker
+Dockerfile*
+docker-compose*
 .dockerignore
+
+# Build artifacts (will be built inside container)
+static/dist/
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Credentials
+credentials.json
+
+# Test
+tests/
+.pytest_cache/
