--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# mongodb connection string
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/your_db_name
+# MongoDB Connection
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/?appName=Cluster0
 
-# google sheets api
+# Google Sheets API
 GOOGLE_SHEETS_CREDENTIALS=credentials.json
-GOOGLE_SHEETS_NAME=nama_spreadsheet
+GOOGLE_SHEETS_NAME=Data Absensi AbsensiPro
 
 # Flask Configuration
-FLASK_SECRET_KEY=your_secret_key_here
+FLASK_SECRET_KEY=your-secret-key-here-change-this-in-production
 FLASK_PORT=5000
-FLASK_DEBUG=True
-FLASK_HOST=localhost
+FLASK_DEBUG=False
+FLASK_HOST=0.0.0.0
