Update setup scripts, docs, and cleanup static files
Added run_app.sh for unified local setup and launch. Updated README with improved setup and Docker instructions. Cleaned up .gitignore and .dockerignore, removed obsolete static and database files, and adjusted requirements.txt for better dependency management.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ opencv-python
 numpy
 dnspython
 Pillow
-face-recognition
 pytest
 pytest-mock
 gspread
@@ -12,4 +11,6 @@ oauth2client
 python-dotenv
 gunicorn
 requests
-
+setuptools
+cmake
+face-recognition
