Refactor: Use env admin creds, update deploy, remove script
Move admin credentials to environment variables (ADMIN_USER / ADMIN_PASSWORD) and update app auth to read from .env. Add admin entries to .env.example. Update README with production deployment instructions that use the provided deploy.sh (make executable and add build/start/status/stop/logs/restart usage). Fix deploy.sh health check to target the correct container name (absensipro). Remove the large static/scripts/script.js client bundle and delete stale test_output.txt. Also adjust a small icon in templates/index.html.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/?appName=Cluster0
 GOOGLE_SHEETS_CREDENTIALS=credentials.json
 GOOGLE_SHEETS_NAME=Data Absensi AbsensiPro
 
+# Admin Credentials
+ADMIN_USER=admin
+ADMIN_PASSWORD=your-secure-password-here
+
 # Flask Configuration
 FLASK_SECRET_KEY=your-secret-key-here-change-this-in-production
 FLASK_PORT=5000
